# bug-hunt-ai

./: .gitignore  .pylintrc  LEARNING_PATHS.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .env.sample  .tool-versions  Dockerfile  main.py  manage.py  pyproject.toml
backend/ai_core/: admin.py  api_types.py  consumers.py  conversation.py  models.py  routing.py
backend/ai_core/consumers/: consumers.py  learning_path_consumers.py
backend/ai_core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_conversation_id_alter_message_id.py  0003_message_language.py  0004_conversation_conversation_type.py  0004_summary.py
backend/ai_core/utils/: ai_helpers.py  ai_helpers_general.py  auth_helpers.py  context_helpers.py  conversation_helpers.py  prompts.py
backend/api/: admin.py  consumers.py  models.py  routing.py
backend/api/migrations/: 0001_initial.py
backend/bug_hunt_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/execution/: api.py  api_types.py  models.py
backend/execution/migrations/: 0001_initial.py
backend/execution/services/: python_executor.py
backend/learning_paths/: __init__.py  admin.py  api.py  api_types.py  models.py
backend/learning_paths/management/: __init__.py
backend/learning_paths/migrations/: 0001_initial.py  0002_learningtopic_created_by.py  0003_subtopicprogress_ai_confidence_and_more.py  0004_subtopicprogress_conversation.py  __init__.py  (+1 more)
backend/scripts/: generate_pydantic_ts_types.py
backend/users/: admin.py  api.py  api_types.py  managers.py  models.py
(+53 files in other folders)
