[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "channels>=4.3.1",
    "daphne>=4.2.1",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.4.3",
    "docker>=7.1.0",
    "google-auth>=2.40.0",
    "google-genai>=1.36.0",
    "ninja-schema>=0.14.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-to-typescript2>=1.0.6",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
    "whitenoise>=6.11.0",
]
